--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native": "0.70.5",
     "react-native-modal": "^13.0.1",
     "react-native-web": "~0.18.9",
-    "@react-native-async-storage/async-storage": "~1.17.3"
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "expo-camera": "~13.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
